Add base layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
-
+import BaseLayout from "@/Layouts/BaseLayout.astro";
+const titlePage = 'ClipBoard'
 ---
-
+<BaseLayout title={titlePage}>
+</BaseLayout>
