--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -37,4 +37,17 @@ const { title } = Astro.props;
     /* Fonts */
     --font1: "Bai Jamjuree", sans-serif;
   }
+
+  *, 
+  ::before, 
+  ::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  body {
+    min-height: 100vh;
+    font-family: var(--font1);
+  }
 </style>
