--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -28,7 +28,9 @@ const { title } = Astro.props;
     /* Colors */
     /* Primary */
     --cyan: hsl(171, 66%, 44%);
+    --cyan-ghost: hsla(171, 66%, 44%, 0.5);
     --blue: hsl(233, 100%, 69%);
+    --blue-ghost: hsla(233, 100%, 69%, 0.5);
 
     /* Neutral */
     --dark-blue: hsl(210, 10%, 33%);
@@ -49,5 +51,11 @@ const { title } = Astro.props;
   body {
     min-height: 100vh;
     font-family: var(--font1);
+    font-size: 18px;
+  }
+
+  .container {
+    width: 90%;
+    margin-inline: auto;
   }
 </style>
