--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
+import Header from "@/components/Header.astro";
 import BaseLayout from "@/Layouts/BaseLayout.astro";
 const titlePage = 'ClipBoard'
 ---
 <BaseLayout title={titlePage}>
+	<Header/>
 </BaseLayout>
